@@ -36,7 +36,7 @@ requires:
   perl: 5.6.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=PYX
-  homepage: https://github.com/tupinek/PYX
+  homepage: https://github.com/michal-josef-spacek/PYX
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/PYX
+  repository: git://github.com/michal-josef-spacek/PYX
 version: '0.06'
