@@ -26,8 +26,8 @@ requires 'Readonly' => 0;
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=PYX';
-resources 'homepage' => 'https://github.com/tupinek/PYX';
-resources 'repository' => 'git://github.com/tupinek/PYX';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/PYX';
+resources 'repository' => 'git://github.com/michal-josef-spacek/PYX';
 test_requires 'English' => 0;
 test_requires 'Error::Pure::Utils' => 0.16;
 test_requires 'File::Object' => 0.07;
