@@ -70,7 +70,7 @@ SEE ALSO
         Install the PYX modules.
 
 REPOSITORY
-    <https://github.com/tupinek/PYX>
+    <https://github.com/michal-josef-spacek/PYX>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
